--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,166 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.card{
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px hsl(0, 0%,0%, 0.1);
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    max-width: 250px;
+    display: inline-block;
+   
+}
+.card-image{
+    max-width: 60%;
+    height: auto;
+    border-radius: 50%;
+    margin-bottom: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.card-title{
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    color: hsl(0,0%,20%)
+}
+.card-text{
+    font-family: Arial, Helvetica, sans-serif;
+    color: hsl(0,0%,30%)
+}
+.student{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 2rem;
+    padding: 10px;
+    border: 1px solid hsla(0, 0%, 49%, 0.8);
+}
+.student p{
+    margin: 0;
+}
+
+.container{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.count_display{
+    font-size: 10rem;
+    margin-top: 0;
+    margin-bottom: 50px;
+}
+.count-button{
+    width: 150px;
+    height: 50px;
+    margin: 0 5px;
+    background-color: hsla(240, 43%, 72%, 0.59);
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.count-button:hover{
+    background-color: hsla(240, 43%, 57%, 0.59);
+}
+.item{
+    border: 1px solid black;
+    width: 250px;
+    text-align: center;
+    padding: 10px;
+    
+}
+.nav-items{
+    display: flex;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-right: 10px;
+}
+.nav-bar{
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 10px;
+    background-color: lightgrey;
+    border-radius: 5px;
+}
+.nav-icons{
+    margin-right: 5px;
+}
+.nav-text{
+    font-size: 20px;
+}
+.navbar_input{
+    display: flex;
+    align-items: center;
+    width: 50%;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
+    background-color: rgb(221, 227, 233);
+    padding: 2px;
+}
+
+.clock-container{
+    backdrop-filter: blur(5px);
+    width: 100vw;
+    padding: 10px 0;
+}
+.clock{
+    font-size: 6rem;
+    font-weight: bold;
+    font-family: monospace;
+    text-align: center;
+    text-shadow: 3px 3px 5px hsl(0, 0%, 0%, 0.75);    
+}
+.box{
+    border: 3px solid black;
+    padding: 25px;
+}
+
+.stopwatch{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 5px solid;
+    border-radius: 50px;
+    background-color: white;
+    padding: 30px;
+}
+.display{
+    font-size: 5rem;
+    font-family: monospace;
+    font-weight: bold;
+    color: hsl(0,0% ,30%);
+    text-shadow: 2px 2px 2px;
+    margin-bottom: 25px;
+
+}
+.controls button{
+    font-size: 1.5 rem;
+    font-weight: bold;
+    padding: 10px 20px;
+    margin: 5px;
+    min-width: 125px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    color: white;
+    transition: background-color 0.5s ease;
+
+}
+.start-button{
+    background-color:hsl(115, 100%, 40%);
+}
+.start-button:hover{
+    background-color:hsl(115, 100%, 30%);
+}
+.stop-button{
+    background-color:hsl(10, 90%, 50%);
+}
+.stop-button:hover{
+    background-color:hsl(10, 90%, 40%);
+}
+.reset-button{
+    background-color:hsl(205, 90%, 60%);
+}
+.reset-button:hover{
+    background-color:hsl(205, 90%, 50%);
 }
